--- a/package.json
+++ b/package.json
@@ -3,20 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "7.21.11",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "3.41.0",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "1.10.5",
     "date-fns": "^3.6.0",
+    "history": "5.3.0",
+    "node-sass": "9.0.0",
+    "prop-types": "15.8.1",
     "react": "^18.2.0",
-    "react-apexcharts": "^1.4.1",
+    "react-apexcharts": "1.4.0",
+    "react-bootstrap": "^2.10.2",
     "react-datepicker": "^6.5.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3",
+    "react-router-dom": "6.12.1",
     "react-scripts": "5.0.1",
-    "react-strap": "^0.0.1",
-    "reactstrap": "^9.2.2",
-    "web-vitals": "^2.1.4"
+    "reactstrap": "9.2.0",
+    "sass": "1.63.2",
+    "web-vitals": "3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
